--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     ".": {
       "import": "./index.js",
       "require": "./index.js"
+    },
+    "./utils/*.js": {
+      "import": "./utils/*.js",
+      "require": "./utils/*.js"
     }
   },
   "bin": {
